evenframe_core/src/tooling/snapshots/evenframe_core__tooling__build_config__tests__invalid_typesync_configs_are_rejected.snap
---
source: evenframe_core/src/tooling/build_config.rs
expression: "errors.join(\"\\n\\n\")"
---
Configuration error: Failed to parse [typesync]: unknown field `should_generate_arktype_types`, expected one of `output`, `outputs`, `collision_strategy`, `struct_variants`


Configuration error: Failed to parse [typesync]: unknown variant `arcktype`, expected one of `arktype`, `effect`, `macroforge`, `flatbuffers`, `protobuf`
in `output.kind`


Configuration error: Failed to parse [typesync]: `output` and `outputs` cannot both be set


Configuration error: Failed to parse [typesync]: the `arktype` output cannot use mode = "per_file"; only effect and macroforge can


Configuration error: Failed to parse [typesync]: `package` and `import_validate` only apply to protobuf outputs, not `effect`


Configuration error: Failed to parse [typesync]: `macros` only applies to macroforge outputs, not `effect`


Configuration error: Failed to parse [typesync]: `file` names a single output file, but the `effect` output is per-file


Configuration error: Failed to parse [typesync]: unknown variant `kebabcase`, expected one of `pascal`, `kebab`, `snake`, `camel`
in `output.file_naming`


Configuration error: Failed to parse [typesync]: unknown variant `autorename`, expected `error` or `auto_rename`
in `collision_strategy`
