evenframe_core/src/tooling/snapshots/evenframe_core__tooling__build_config__tests__outputs_array_keeps_each_kinds_settings.snap
---
source: evenframe_core/src/tooling/build_config.rs
expression: config.outputs
---
[
    TypesyncOutput {
        kind: Arktype,
        dir: "./generated/arktype",
        file: Some(
            "schemas.ts",
        ),
        files: OutputConfig {
            mode: Single,
            barrel_file: false,
            file_naming: Kebab,
            file_extension: ".ts",
            array_style: Shorthand,
            import_extension: Bare,
        },
        namespace: None,
        package: None,
        import_validate: false,
        macros: {},
    },
    TypesyncOutput {
        kind: Protobuf,
        dir: "./proto",
        file: None,
        files: OutputConfig {
            mode: Single,
            barrel_file: false,
            file_naming: Kebab,
            file_extension: ".ts",
            array_style: Shorthand,
            import_extension: Bare,
        },
        namespace: None,
        package: Some(
            "com.example",
        ),
        import_validate: true,
        macros: {},
    },
]
