evenframe_core/src/tooling/snapshots/evenframe_core__tooling__build_config__tests__single_output_is_read_in_full.snap
---
source: evenframe_core/src/tooling/build_config.rs
expression: config.outputs
---
[
    TypesyncOutput {
        kind: Macroforge,
        dir: "./generated",
        file: None,
        files: OutputConfig {
            mode: PerFile,
            barrel_file: false,
            file_naming: Kebab,
            file_extension: ".svelte.ts",
            array_style: Shorthand,
            import_extension: Js,
        },
        namespace: None,
        package: None,
        import_validate: false,
        macros: {
            "Form": "@app/forms",
        },
    },
]
